blog page bug fix_whitespace

--- a/src/assets/scss/blogPage.scss
+++ b/src/assets/scss/blogPage.scss
@@ -106,4 +106,7 @@
     .submit{
         margin-left: 37vw;
     }
+    .content{
+        font-size: large;
+    }
 }
